--- a/project/compare.html
+++ b/project/compare.html
@@ -20,8 +20,11 @@
       <a href="wbs.html">Process Generator</a>
     </nav>
   </header>
-  <main class="container">
+  <section class="hero">
     <h1>Comparison Engine</h1>
+    <p>Compare PM standards side-by-side to understand differences, similarities, and best practices</p>
+  </section>
+  <div style="padding: 15px;"></div>
     <div class="toolbar">
       <label>
         Select Topic
@@ -32,9 +35,9 @@
         <input id="topicFilter" type="text" placeholder="Filter within columns"/>
       </label>
     </div>
-  </main>
+    <div style="padding: 5px;"></div>
   <section class="repo-grid" id="compareGrid"></section>
-
+  <div style="padding: 15px;"></div>
   <footer class="app-footer">
     <span>© 2025 PM Standards Comparator · Prototype</span>
   </footer>
