--- a/project/insights.html
+++ b/project/insights.html
@@ -20,13 +20,15 @@
       <a href="wbs.html">Process Generator</a>
     </nav>
   </header>
-  <main class="container">
-    <h1>Insights Dashboard</h1>
+  <main style="text-align: center;">
+    <section class="hero">
+      <h1>Insights Dashboard</h1>
+      <p>Comprehensive analysis of similarities, differences, and unique elements</p>
+    </section>
+  </main>
+    <div style="padding: 15px;">
+    </div>
     <div id="insights" class="tab-content">
-      <div class="content-header">
-        <p>Comprehensive analysis of similarities, differences, and unique elements</p>
-      </div>
-
       <div class="insights-grid">
         <div class="insight-card similarities">
           <div class="insight-header">
@@ -58,12 +60,12 @@
         <div id="coverageMap" class="coverage-map"></div>
       </div>
     </div>
-  </main>
+    <div style="padding: 15px;">
+    </div>
   <footer class="app-footer">
     <span>© 2025 PM Standards Comparator · Prototype</span>
   </footer>
   <script src="insights.js"></script>
 </body>
 </html>
-
 
