--- a/project/uniqueness.html
+++ b/project/uniqueness.html
@@ -20,24 +20,24 @@
       <a href="wbs.html">Process Generator</a>
     </nav>
   </header>
-  <main class="container">
+  
     <section class="hero">
       <h1>Uniqueness Analysis</h1>
       <p>Discover what makes each PM standard distinctive and when to leverage their unique strengths</p>
     </section>
-
-    <section class="toolbar chips">
+  
+  <div style="padding: 10px;">  </div>
+  <section class="toolbar chips">
       <button class="chip active" data-filter="ALL">All</button>
       <button class="chip" data-filter="PMBOK7">PMBOK 7</button>
       <button class="chip" data-filter="PRINCE2">PRINCE2</button>
       <button class="chip" data-filter="ISO">ISO 21500/21502</button>
       <span class="spacer"></span>
       <input type="text" id="uniqueSearch" class="chip-input" placeholder="Search uniqueness items..."/>
-    </section>
+  </section>
 
-  </main>
   <section class="repo-grid" id="uniqueGrid"></section>
-
+  <div style="padding: 15px;"></div>
   <footer class="app-footer">
     <span>© 2025 PM Standards Comparator · Prototype</span>
   </footer>
